# OnlineChat

./: .gitmodules  CMakeLists.txt  README.md
clientApp/: CMakeLists.txt
serverApp/: CMakeLists.txt
